[gd_scene load_steps=3 format=3 uid="uid://bvkbdhlhmol3b"]

[ext_resource type="Script" path="res://Scripts/options_sounds.gd" id="1_b0e6a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_soeam"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0, 0.109804, 0.254902, 0.65098)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_bottom = 2.0

[node name="options_sounds" type="Control"]
layout_mode = 3
anchor_right = 0.453
anchor_bottom = 0.21
offset_right = 0.199982
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0e6a")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.007
anchor_bottom = 1.0
offset_right = 0.0959778
offset_bottom = -64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_soeam")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Music_container" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="label" type="Label" parent="PanelContainer/VBoxContainer/Music_container"]
layout_mode = 2
text = "Music - On/Off"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/Music_container"]
visibility_layer = 0
layout_mode = 2

[node name="Music" type="CheckButton" parent="PanelContainer/VBoxContainer/Music_container"]
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true

[node name="Effects_Container" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Effects_Container"]
layout_mode = 2
text = "Effects Volume"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/Effects_Container"]
visibility_layer = 0
layout_mode = 2

[node name="Effects" type="HSlider" parent="PanelContainer/VBoxContainer/Effects_Container"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
min_value = -10.0
max_value = 10.0
step = 0.1
value = 1.0

[node name="Music_Container_Slider" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Music_Container_Slider"]
layout_mode = 2
text = "Music Volume"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/Music_Container_Slider"]
visibility_layer = 0
layout_mode = 2

[node name="Music_slider" type="HSlider" parent="PanelContainer/VBoxContainer/Music_Container_Slider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
min_value = -10.0
max_value = 10.0
value = 1.0

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBoxContainer"]
visibility_layer = 0
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Back"

[connection signal="toggled" from="PanelContainer/VBoxContainer/Music_container/Music" to="." method="_on_music_toggled"]
[connection signal="drag_ended" from="PanelContainer/VBoxContainer/Effects_Container/Effects" to="." method="_on_effects_drag_ended"]
[connection signal="drag_ended" from="PanelContainer/VBoxContainer/Music_Container_Slider/Music_slider" to="." method="_on_music_slider_drag_ended"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer3/Back" to="." method="_on_back_pressed"]
